<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Otonom Sera App</string>
    <string name="controllerTitle_textView_text">Manuel Kontrol</string>
    <string name="controllerSwitcher_textView_text">Manuel Kontrol</string>
    <string name="controllerLabel_textView_text0">Manuel Kontrolü Açmak İçin Yukarıdaki Butonu Kullanınız</string>
    <string name="controllerLabel_textView_text1">Serayı Kontrol Etmek İçin Aşağıdaki Tuşları Kullanabilirsiniz</string>
    <string name="infoTitle_textView_text">Ortam Bilgileri</string>
    <string name="airTemp_textView_text">Hava Sıcaklığı</string>
    <string name="soilMasture_textView_text">Toprak Nemi</string>
    <string name="LDR2_textView_text">Güneş Işığı 2</string>
    <string name="LDR1_textView_text">Güneş Işığı 1</string>
    <string name="airHum_textView_text">Hava Nemi</string>
    <string name="members_textView_text">Otonom Sera Ekibi</string>
    <string name="appDeveloper_textView_text">Mobil Uygulama</string>
    <string name="mail_button_text">E-Posta</string>
    <string name="web_button_text">Web Sitemiz</string>
    <string name="mainTitle_textView_text" translatable="false">Otonom Sera App</string>
    <string name="buttonTest_button_text">Sera Test</string>
    <string name="buttonController_button_text">Manuel Kontrol</string>
    <string name="buttonInformations_button_text">Ortam Bilgileri</string>
    <string name="buttonHacker_button_text">Geliştirici Seçenekleri</string>
    <string name="settingsTitle_textView_text">Ayarlar</string>
    <string name="bluetoothState_textView_text">Bluetooth Durumu</string>
    <string name="hackerState_textView_text">Geliştirici Seçenekleri</string>
    <string name="controllerDatas_textView_text">Tuş Atamaları</string>
    <string name="aboutUs_textView_text">Hakkımızda</string>
    <string name="upButtonData_editText_text">Yukarı</string>
    <string name="downButtonData_editText_text">Aşağı</string>
    <string name="leftButtonData_editText_text">Sola</string>
    <string name="rightButtonData_editText_text">Sağa</string>
    <string name="nameInput_editText_text">İsim</string>
    <string name="passwordInput_editText_text">Şifre</string>
    <string name="testTitle_textView_text">Otonom Sera Test</string>
    <string name="testLabel_textView_text">Aşağıdaki buton, Otonom Sera robotumuzun sizin belirldiğiniz bir süre (x) baz alınarak şu şekilde hareket etmesini sağlar: x Saniye boyunca dümdüz ilerle,sağa dön, x saniye ilerle, sola dön, x Saniye ilerle, son olarak bulunduğun konumdan 2x saniye boyunca geri gidip {Test Tamam} mesajını yolla.</string>
    <string name="startTest_button_text">Testi Başlat</string>
    <string name="bluetooth_listView_text">Cihaz Seçiniz</string>
    <string name="forgettenHacker_toast">Şarkıyı Kapamayı Unuttun De mi?</string>
    <string name="unsupportedBluetooth_toast">Cihazınız Bluetooth\'u Desteklemiyor</string>
    <string name="pleaseOpenBT_toast">Uygulama Ayarlarından Bluetooth\'u Açınız</string>
    <string name="closedHacker_toast">Geliştirici Seçenekleri Kapalı</string>
    <string name="connectingSucces_toast">Cihazına Başarıyla Bağlanıldı</string>
    <string name="connectingUnsucces_toast">Bağlantı başarısız</string>
    <string name="exApp_toast">Uygulamadan Çık</string>
    <string name="exAppQuest_toast">Gerçekten çıkmak istiyor musunuz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="warning">UYARI!</string>
    <string name="recorded">Kaydedildi!</string>
    <string name="hacker">Geliştirici</string>
    <string name="noPairedDevices_toast">Eşleştirilmiş Cihaz Yok</string>
    <string name="controllerOpened_toast">Manuel Kontrol Açıldı!</string>
    <string name="controllerClosed_toast">Manuel Kontrol Kapatıldı!</string>
    <string name="noConnectedDevices_toast_toast">Bağlı Cihaz Yok</string>
    <string name="closedBT_toast">Bluetooth Açık Değil</string>
    <string name="noEmailApp_toast">Cihazda e-posta uygulaması bulunamadı</string>
    <string name="plsFillAllSpc_toast">Lütfen Belirtilen Alanlar Boş Bırakmayınız</string>
    <string name="plsFillNameSpc_toast">Lütfen İsim Alanını Boş Bırakmayınız</string>
    <string name="plsFillPasswordSpc_toast_toast">Lütfen Şifre Alanını Boş Bırakmayınız</string>
    <string name="truePassw_toast">Şifre Doğru, Hoşgeldiniz Sayın</string>
    <string name="falsePassw_toast">Şifre Yanlış, Lütfen Tekrar Deneyiniz</string>
    <string name="bluettothOpened_toast">Bluetooth Açıldı!</string>
    <string name="bluettothClosed_toast">Bluetooth Kapatıldı!</string>
    <string name="testStarted_toast">Test Başlatıldı!</string>
    <string name="battery_percent_textView_text" translatable="false">Batarya Yüzdesi</string>
    <string name="ar_textView_text" translatable="false">Arapça</string>
    <string name="bn_textView_text" translatable="false">Bengladeşçe</string>
    <string name="en_textView_text" translatable="false">İngilizce</string>
    <string name="es_textView_text" translatable="false">İspanyolca</string>
    <string name="fr_textView_text" translatable="false">Fransızca</string>
    <string name="hi_textView_text" translatable="false">Hintçe</string>
    <string name="ku_textView_text" translatable="false">Kürtçe</string>
    <string name="pt_textView_text" translatable="false">Portekizce</string>
    <string name="ru_textView_text" translatable="false">Rusça</string>
    <string name="tr_textView_text" translatable="false">Türkçe</string>
    <string name="ur_textView_text" translatable="false">Urduca</string>
    <string name="zh_textView_text" translatable="false">Çince</string>

</resources>