<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">


    <View
        android:id="@+id/mainTitle_view"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/title_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainTitle_textView"
        android:layout_width="200dp"
        android:gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:autoSizeTextType="uniform"
        android:text="@string/mainTitle_textView_text"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textStyle="bold"
        android:translationZ="5dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettings_imageView"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buttonBluetooth_imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bluetooth_on" />

    <ImageView
        android:id="@+id/buttonSettings_imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonBluetooth_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <LinearLayout
        android:id="@+id/bluetooth_view"
        android:layout_width="365dp"
        android:layout_height="565dp"
        android:background="@drawable/rounded_view_background_gray"
        android:elevation="10pt"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle_view"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/bluetooth_text"
            android:layout_width="174dp"
            android:layout_height="46dp"
            android:autoSizeTextType="uniform"
            android:elevation="10dp"
            android:text="@string/bluetooth_listView_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="visible" />

        <ListView
            android:id="@+id/bluetooth_listView"
            android:layout_width="345dp"
            android:layout_height="492dp"
            android:background="@drawable/rounded_list_background"
            android:elevation="10dp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/main_buttons_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle_view">

        <Button
            android:id="@+id/buttonTest_button"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_button_for_test"
            android:drawableLeft="@drawable/test_logo"
            android:elevation="-10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/buttonTest_button_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonController_button"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_button_for_controller"
            android:drawableLeft="@drawable/controller_logo"
            android:elevation="-10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/buttonController_button_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonInformations_button"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_button_for_info"
            android:drawableLeft="@drawable/info_logo"
            android:elevation="-10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/buttonInformations_button_text"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonHacker_button"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_button_for_hacker"
            android:drawableLeft="@drawable/hacker_logo"
            android:elevation="-10dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/buttonHacker_button_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/hacker_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>